<resources>
    <string name="app_name">SAM</string>

    <!-- Set of icons from font awesome -->
    <string name="font_awesome_university_icon">&#xf19c;</string>
    <string name="font_awesome_android_icon">&#xf17b;</string>
    <string name="font_awesome_area_chart_icon">&#xf1fe;</string>
    <string name="font_awesome_cubes_icon">&#xf1b3;</string>
    <string name="font_awesome_mobile_phone_icon">&#xf10b;</string>

    <!-- Buttons -->
    <string name="main_register_btn">"Registrarse"</string>
    <string name="main_login_btn">"Iniciar Sesión"</string>
    <string name="login_enter_btn">"Ingresar"</string>
    <string name="register_next_btn">"Siguiente"</string>
    <string name="register_send_btn">"Enviar"</string>
    <string name="send_mail_send_btn">"Enviar"</string>
    <string name="view_mail_delete_btn">"Borrar"</string>

    <!-- Menu -->
    <string name="action_settings">Mi perfil</string>
    <string name="action_logout">Salir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Input Text -->
    <string name="login_username_input">"Nombre de usuario"</string>
    <string name="login_password_input">"Contraseña"</string>
    <string name="register_name_input">"Nombres"</string>
    <string name="register_lastname_input">"Apellidos"</string>
    <string name="register_username_input">"Nombre de usuario"</string>
    <string name="register_password_input">"Contraseña"</string>
    <string name="register_reppassword_input">"Repetir contraseña"</string>
    <string name="register_birth_date_input">"Fecha de nacimiento"</string>
    <string name="register_phone_input">"Teléfono"</string>
    <string name="register_currentmail_input">"Correo actual"</string>
    <string name="register_location_input">"Ubicación"</string>
    <string name="send_mail_recipient_input">"Para"</string>
    <string name="send_mail_cc_input">"Cc"</string>
    <string name="send_mail_subject_input">"Asunto"</string>
    <string name="send_mail_message_input">"Mensaje"</string>

    <!-- Static Text -->
    <string name="login_login_txt">"Iniciar Sesión"</string>
    <string name="register_register_txt">"Registro"</string>
    <string name="register_domain_txt">"@sam.com"</string>
    <string name="register_gender_txt">"Genero"</string>
    <string name="send_mail_new_message_txt">"Mensaje nuevo"</string>
    <string name="send_mail_postpone_sending_txt">"Posponer envio"</string>
    <string name="send_mail_send_date_txt">"Fecha"</string>
    <string name="send_mail_send_hour_txt">"Hora"</string>
    <string name="view_mail_message_subject_txt">"Asunto"</string>
    <string name="view_mail_message_sender_txt">"Enviado por"</string>
    <string name="view_mail_message_recipient_txt">"Para "</string>
    <string name="view_mail_message_cc_txt">"Cc"</string>
    <string name="view_mail_message_sent_date_txt">"Hora de envío"</string>
    <string name="view_mail_message_body_txt">"Mensaje"</string>
    <string name="send_mail_view_confirmation_txt">"Confirmación de lectura"</string>
    <string name="send_mail_urgent_txt">"Urgente"</string>
    <string name="view_user_full_name">"Nombre de usuario"</string>
    <string name="view_email">Correo</string>
    <string name="view_mobile_phone">"Teléfono"</string>
    <string name="view_gender">Género</string>
    <string name="view_birth_date">"Fecha de nacimiento"</string>
    <string name="view_place">Ubicación</string>
    <string name="view_bar">"Mis mensajes"</string>
    <string name="view_user_title">"Mi perfil"</string>

    <!-- Errors Text -->
    <string name="empty_fielf_error">"Este campo no puede estar vacío "</string>
    <string name="username_in_use_fielf_error">"Este nombre de usuario ya se encuentra en uso"</string>
    <string name="username_short_error">"El nombre de usuario debe tener al menos 5 caracteres"</string>
    <string name="password_doesnt_match_error">"Las contraseñas deben ser iguales"</string>
    <string name="authentication_error">"Datos de usuario invalidos"</string>
    <string name="refresh_token_error">"No se pudo refrescar el token"</string>
    <string name="conection_error">"Hay un problema de conexion, intente mas tarde"</string>

    <!-- Toast Msg Text -->
    <string name="user_created_toast">"Usuario creado con exito, por favor ingrese con su contraseña"</string>
    <string name="mail_sended_toast">"Se envío el correo con exito"</string>


    <!-- Shared Preferences -->
    <string name="shared_preferences_name">"sam_login_data"</string>
    <string name="shared_token">"token"</string>
    <string name="shared_refresh_token">"refresh"</string>


    <string-array name="register_genders_array">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <!-- Para probar las listas y luego de implementar el modelo borrar-->
    <string name="txt_sender">"Pepito Perez"</string>
    <string name="txt_subject">"Correo de prueba"</string>
    <string name="txt_body">"Este es un correo de prueba"</string>
    <string name="txt_date">"12/12/2017"</string>


    <string name="html">
        <![CDATA[
        <h1 style="color:blue;">Main Title</h1>
        <h2>A sub-title</h2>
        <p>This is some html. Look, here\'s an <u>underline</u>.</p>
        <p>Look, this is <em>emphasized.</em> And here\'s some <b>bold</b>.</p>
        <p>This is a UL list:
        <ul>
        <li>One</li>
        <li>Two</li>
        <li>Three</li>
        </ul>
        <p>This is an OL list:
        <ol>
        <li>One</li>
        <li>Two</li>
        <li>Three</li>
        </ol>
        ]]>
    </string>

</resources>
