<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sam.teamd.samandroidclient.ui.ViewUserActivity">


    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="6dp">

        <TextView
            android:id="@+id/textView_user_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_user_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="28sp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_user"
            android:padding="20sp"/>

        <TextView
            android:id="@+id/textView_user_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_user_full_name"
            android:textSize="15sp"
            android:padding="5sp"/>

        <TextView
            android:id="@+id/textView_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_email"
            android:textSize="15sp"
            android:padding="5sp"/>

        <TextView
            android:id="@+id/textView_user_mobile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_mobile_phone"
            android:textSize="15sp"
            android:padding="5sp"/>

        <TextView
            android:id="@+id/textView_user_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_gender"
            android:textSize="15sp"
            android:padding="5sp"/>

        <TextView
            android:id="@+id/textView_user_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_birth_date"
            android:textSize="15sp"
            android:padding="5sp"/>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
