<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sam.teamd.samandroidclient.SendMailActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/send_mail_recipient_input"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/send_mail_subject_input"
        android:inputType="textEmailSubject"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/input_send_mail_send_date"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="235dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="top"
        android:ems="10"
        android:hint="@string/send_mail_message_input"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/send_mail_cc_input"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send_mail_new_message_txt"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send_mail_postpone_sending_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/input_send_mail_send_date"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_send_mail_send_date"
        android:layout_marginBottom="8dp"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/input_send_mail_send_date"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/send_mail_send_date_txt"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintLeft_toRightOf="@+id/checkBox2"
        app:layout_constraintRight_toLeftOf="@+id/input_send_mail_send_hour"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        android:maxLines="1"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/input_send_mail_send_hour"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/send_mail_send_hour_txt"
        android:inputType="time"
        app:layout_constraintLeft_toRightOf="@+id/input_send_mail_send_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_send_mail_send_date"
        android:layout_marginRight="16dp"
        tools:ignore="RtlHardcoded"
        android:layout_marginEnd="16dp" />
</android.support.constraint.ConstraintLayout>
