<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scroll"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sam.teamd.samandroidclient.ui.ViewMailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txt_view_mail_message_subject"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginRight="16dp"
        android:text="@string/view_mail_message_subject_txt"
        android:background="@drawable/back"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintLeft_toRightOf="@+id/vtxt_view_mail_message_subject"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/vtxt_view_mail_message_subject"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txt_view_mail_message_sender"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/view_mail_message_sender_txt"
        android:background="@drawable/back"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/vtxt_view_mail_message_sender"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/vtxt_view_mail_message_sender" />

    <TextView
        android:id="@+id/txt_view_mail_message_recipient"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/view_mail_message_recipient_txt"
        android:background="@drawable/back"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/vtxt_view_mail_message_recipient"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/vtxt_view_mail_message_recipient"
        tools:ignore="RtlHardcoded" />

        <TextView
        android:id="@+id/txt_view_mail_message_sent_date"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/view_mail_message_sent_date_txt"
        android:background="@drawable/back"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/vtxt_view_mail_message_sent_date"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/vtxt_view_mail_message_sent_date"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/vtxt_view_mail_message_subject"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_mail_message_subject_txt"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txt_view_mail_message_subject"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/vtxt_view_mail_message_sender"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_mail_message_sender_txt"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txt_view_mail_message_sender"
        app:layout_constraintTop_toBottomOf="@+id/vtxt_view_mail_message_subject"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/vtxt_view_mail_message_sent_date"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_mail_message_sent_date_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txt_view_mail_message_sent_date"
        app:layout_constraintTop_toBottomOf="@+id/vtxt_view_mail_message_recipient"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/vtxt_view_mail_message_recipient"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_mail_message_recipient_txt"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txt_view_mail_message_recipient"
        app:layout_constraintTop_toBottomOf="@+id/vtxt_view_mail_message_sender"
        tools:ignore="RtlHardcoded" />

        <WebView
            android:id="@+id/txt_view_mail_message_body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/view_mail_message_body_txt"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btn_view_mail_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_view_mail_message_sent_date" />

        <Button
            android:id="@+id/btn_view_mail_delete"
            style="@android:style/TextAppearance.Material.Button"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/view_mail_delete_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
